added tests and modified documentation
